fix corrupted sample, rank by sd

--- a/scripts/Snakefile
+++ b/scripts/Snakefile
@@ -14,8 +14,8 @@ seq = '/scratch/chd5n/aneuploidy/raw-data/sequencing/'
 plot = '/scratch/chd5n/aneuploidy/results/plots/'
 hetdat = '/scratch/chd5n/aneuploidy/hetsites-data/'
 dt = '_'.join([str(datetime.now()).split(' ')[0], ''.join(str(datetime.now()).split(' ')[1].split('.')[0].split(':')[0:3])])
-set_num = 12  ## touch gdc_download.py to download next batch
-v_num = 'v2'  ## set_size in gdc_download 100 in v2 from 20 in v1 to get 50 pairs instead of 10
+set_num = 13  ## touch gdc_download.py to download next batch
+v_num = 'v3'  ## set_size in gdc_download 100 in v2 from 20 in v1 to get 50 pairs instead of 10; v3 is custom run to fix errors
 
 
 ## rules
