--- a/scripts/Snakefile
+++ b/scripts/Snakefile
@@ -18,6 +18,9 @@ dt = '_'.join([str(datetime.now()).split(' ')[0], ''.join(str(datetime.now()).sp
 set_num = 13  ## touch gdc_download.py to download next batch
 v_num = 'v3'  ## set_size in gdc_download 100 in v2 from 20 in v1 to get 50 pairs instead of 10; v3 is custom run to fix errors
 rna_set_name = 'simple'
+sva_pass_num <- 1  ## first pass (1) or second pass (2)
+sva_refine <- 0  ## refinement no (0) or yes (1)
+sva_nsv <- 5  ## preferred number of svs to model
 
 
 ## rules
@@ -106,9 +109,12 @@ rule store_hetsite_data:
         'python {input.store} --in_file {input.file_set} --set_num {set_num} --datetime {dt}'
 
 
-# rule rank_by_sd:
-#     input:
-#         rank = 'rank_sd.R'
+rule rank_sd:
+    input:
+        rank = 'rank_sd.R'
+    shell:
+        'module load gcc/7.1.0 openmpi/3.1.4 R/3.6.0; Rscript {input.rank}'
+
 
 rule prep_de:
     input:
@@ -119,5 +125,23 @@ rule prep_de:
         'nohup python {input.dld} --set_name {rna_set_name} > ../logs/prep_de_set_{rna_set_name}_{dt}.out 2> ../logs/prep_de_set_{rna_set_name}_{dt}.err'
 
 
+rule unzip_de:
+    input:
+        uz = 'unzip_de.py'
+    shell:
+        'python {input.uz} --set_name {rna_set_name}'
 
-# rule differential_expression:
+
+rule run_de:
+    input:
+        count_prep = 'count_prep.R',
+        explore_counts = 'count_explr.R',
+        de = 'de_sva.R'
+    shell:
+        '''
+        module load gcc/7.1.0 openmpi/3.1.4 R/3.6.0
+        Rscript {input.count_prep} --args {rna_set_name} {sva_pass_num} {sva_refine} {sva_nsv}
+        
+        Rscript {input.explore_counts} --args {rna_set_name}
+        Rscript {input.de} --args {rna_set_name}
+        '''
